--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sexual harassment reporting app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/ipfs-http-client@46.1.1/dist/index.min.js" integrity="sha256-CzUqnbDT0Awlu9Z8+xv7uyLfej9hsSaR1x1wFY2SZlg=" crossorigin="anonymous"></script>    <title>React App</title>
+    <script src="https://cdn.jsdelivr.net/npm/ipfs-http-client@46.1.1/dist/index.min.js" integrity="sha256-CzUqnbDT0Awlu9Z8+xv7uyLfej9hsSaR1x1wFY2SZlg=" crossorigin="anonymous"></script>
+        <title>DSoot</title>
   </head>
   <body style="background-color: lightgrey;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
